--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
+buildscript {
+    ext.kotlin_version = '1.1.0'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 plugins {
     id "com.diffplug.gradle.spotless" version "3.0.0"
     id 'com.github.ben-manes.versions' version '0.14.0'
     id 'ch.netzwerg.release' version '1.2.4'
+    id 'nebula.kotlin' version '1.1.0'
 }
 
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
+apply plugin: 'application'
 
 group 'com.bmesta.engine'
+
+
+mainClassName = 'com.bmesta.engine.EngineKt'
 
 repositories {
     mavenLocal()
@@ -19,32 +33,24 @@ repositories {
 }
 
 dependencies {
-    testCompile 'io.projectreactor.addons:reactor-test:3.0.5.RELEASE'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile 'junit:junit:4.11'
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile 'junit:junit:4.12'
     testCompile 'org.mock-server:mockserver-netty:3.10.4'
 }
 
 spotless {
     java {
-        licenseHeaderFile rootProject.file('LICENSE')
-        importOrder(['java', 'javax', 'com', 'org'])
-        eclipseFormatFile rootProject.file('config/formatter.xml')
+        licenseHeaderFile rootProject.file('NOTICE')
         trimTrailingWhitespace()
         endWithNewline()
-
-        custom 'Lambda fix', { it.replace('} )', '})').replace('} ,', '},') }
     }
 }
 
 release {
     tagPrefix = ''
 }
-
-task copyRuntimeLibs(type: Copy) {
-    into "build/libs"
-    from configurations.runtime
-}
-build.dependsOn(copyRuntimeLibs)
 
 
 publishing {
