--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,14 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.typesafe.akka', name: 'akka-actor_2.11', version: '2.4.17'
-    compile group: 'org.scala-lang', name: 'scala-library', version: '2.11.8'
+    compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.4.17'
+    compile group: 'com.typesafe.akka', name: 'akka-persistence_2.12', version: '2.4.17'
+    compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.7'
+    compile group: 'org.fusesource.leveldbjni', name: 'leveldbjni-all', version: '1.8'
+//    compile group: 'com.github.michaelpisula', name: 'akka-persistence-inmemory', version: '0.2.1'
+    compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.1'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.scalatest:scalatest_2.11:3.0.0'
+    testCompile 'org.scalatest:scalatest_2.12:3.0.0'
     testCompile 'org.mock-server:mockserver-netty:3.10.4'
 }
 
