feat(api): add rest api

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,3 +6,10 @@ akka.persistence {
 akka.persistence.journal.leveldb {
   dir = "build/journal"
 }
+
+http {
+  host = "localhost"
+  host = ${?HOST}
+  port = 8080
+  port = ${?PORT}
+}
