--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,10 @@ repositories {
 dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.4.17'
     compile group: 'com.typesafe.akka', name: 'akka-persistence_2.12', version: '2.4.17'
+    compile group: 'com.typesafe.akka', name: 'akka-http_2.12', version: '10.0.4'
+    compile group: 'com.typesafe.akka', name: 'akka-http-spray-json_2.12', version: '10.0.4'
     compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.7'
     compile group: 'org.fusesource.leveldbjni', name: 'leveldbjni-all', version: '1.8'
-//    compile group: 'com.github.michaelpisula', name: 'akka-persistence-inmemory', version: '0.2.1'
     compile group: 'org.scala-lang', name: 'scala-library', version: '2.12.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.scalatest:scalatest_2.12:3.0.0'
