--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.4.17'
     compile group: 'com.typesafe.akka', name: 'akka-persistence_2.12', version: '2.4.17'
+    compile group: 'com.typesafe.akka', name: 'akka-persistence-query-experimental_2.12', version: '2.4.17'
     compile group: 'com.typesafe.akka', name: 'akka-http_2.12', version: '10.0.4'
     compile group: 'com.typesafe.akka', name: 'akka-http-spray-json_2.12', version: '10.0.4'
     compile group: 'org.iq80.leveldb', name: 'leveldb', version: '0.7'
